# fairytemplate

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
tests/: test_flow.py
tests/_test_flow_output/fairytool/src/fairytool/: __init__.py
tests/_test_flow_output/fairytool/tests/: test_version.py
{{cookiecutter.library_name}}/: .flake8  README.md  mypy.ini  pyproject.toml  ready.py  setup.cfg
{{cookiecutter.library_name}}/src/{{cookiecutter.library_name}}/: __init__.py
{{cookiecutter.library_name}}/src/{{cookiecutter.library_name}}/dev/: __init__.py  env_controller.py
{{cookiecutter.library_name}}/tests/: test_sample.py  test_version.py
