[metadata]
name = {{cookiecutter.library_name}}
version = 0.0.1
description = Please describe 
long_description = file: README.md
license = MIT

[options]
package_dir=
    =src
packages=find:

# As a one way of software development, dependencies of product and test should be separated. 
# However, this repository does not adopt this strategy, since the users of this repository are expected to
# refer to `tests` surely. So, options.extras_require` is not used.
install_requires =
    pytest>=6.0
    pytest-cov
    mypy
    black
    flake8

[options.packages.find]
where=src

# Ideally, I'd like to transfer this to `pyproject.toml`...
[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
output-file = flake8.txt
tee = true
exclude =
    tests,
    .git,
    __pycache__,
    build,
    dist,
